<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/clContainerDetail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TeamDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.Movies.Title.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="20dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/ivCoverPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/multiplier_150X_dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    tools:ignore="ContentDescription" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivJersey"
                    android:layout_width="@dimen/multiplier_60X_dp"
                    android:layout_height="@dimen/multiplier_60X_dp"
                    android:src="@drawable/broken_image"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/v_shadow"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="@drawable/collapsed_image_background"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@android:color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                style="@style/guideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/multiplier_10X_dp"
                android:text="@string/events"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTeamEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_5X_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:listitem="@layout/item_event" />

            <TextView
                android:id="@+id/textView5"
                style="@style/guideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_10X_dp"
                android:text="@string/team_foundation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvTeamEvents" />

            <TextView
                android:id="@+id/tvTeamFoundationYear"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_3X_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                style="@style/guideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_5X_dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTeamFoundationYear" />

            <TextView
                android:id="@+id/tvDescriptionTeamDetail"
                style="@style/contentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/multiplier_3X_dp"
                android:layout_marginLeft="@dimen/multiplier_4X_dp"
                android:layout_marginRight="@dimen/multiplier_4X_dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ImageView
                android:id="@+id/ivWeb"
                android:layout_width="@dimen/multiplier_13X_dp"
                android:layout_height="@dimen/multiplier_13X_dp"
                android:layout_margin="@dimen/multiplier_4X_dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_browser" />

            <ImageView
                android:id="@+id/ivTwitter"
                android:layout_width="@dimen/multiplier_13X_dp"
                android:layout_height="@dimen/multiplier_13X_dp"
                android:layout_margin="@dimen/multiplier_4X_dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/ivWeb"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_twitter" />

            <ImageView
                android:id="@+id/ivInstagram"
                android:layout_width="@dimen/multiplier_13X_dp"
                android:layout_height="@dimen/multiplier_13X_dp"
                android:layout_margin="@dimen/multiplier_4X_dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/ivTwitter"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_instagram" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="@dimen/multiplier_13X_dp"
                android:layout_height="@dimen/multiplier_13X_dp"
                android:layout_margin="@dimen/multiplier_4X_dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/ivInstagram"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_facebook" />

            <ImageView
                android:id="@+id/ivYoutube"
                android:layout_width="@dimen/multiplier_13X_dp"
                android:layout_height="@dimen/multiplier_13X_dp"
                android:layout_margin="@dimen/multiplier_4X_dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/ivFacebook"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_youtube"
                tools:layout_editor_absoluteX="347dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>